# agentic_tutor

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml
backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
backend/ai_agents/: explanation_agent.py  flashcards_agent.py  questions_agent.py  triage_agent.py
backend/models/: gemini.py  qwen.py
backend/schemas/: explanation_output.py  flashcards_output.py  places.py  questions_output.py  weather.py
backend/utils/: extract_forecast_data.py
backend/wheels/: griffe-1.9.0-py3-none-any.whl  mcp-1.12.3-py3-none-any.whl  openai_agents-0.2.4-py3-none-any.whl  retry_requests-2.0.0-py3-none-any.whl  url_normalize-2.2.1-py3-none-any.whl
frontend/: Dockerfile  README.md  eslint.config.js  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/prisma/: schema.prisma
frontend/src/: globals.css  index.css  middleware.ts
frontend/src/actions/: data.actions.ts  lesson.actions.ts  user.actions.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(root)/: layout.tsx  page.tsx
frontend/src/app/lesson/: page.tsx
frontend/src/components/: AppSidebar.tsx  ExplainView.tsx  HomeView.tsx  Navbar.tsx  QuizView.tsx  ReviewView.tsx
frontend/src/components/ui/: card.tsx  sidebar.tsx  toaster.tsx
frontend/src/hooks/: use-toast.ts  useStudySession.ts
frontend/src/lib/: mockData.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: index.ts
tools/: translation_tool.py
(+6 files in other folders)
